k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: hackathon-auth
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
